--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -134,42 +134,67 @@ jobs:
           AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
           EOF
 
-          # Stop existing containers (after .env exists to avoid var-warnings)
-          docker-compose -f docker-compose.backend.yml down || true
-
-          # Stop existing containers (after .env exists to avoid var-warnings)
-          docker-compose -f docker-compose.backend.yml down || true
-
-          # Build and start containers (fail fast if build fails)
+          # ZERO-DOWNTIME DEPLOYMENT STRATEGY
+          echo "🚀 Starting zero-downtime deployment..."
+          
+          # Ensure network exists
           docker network create ai-resume-network || true
-          docker-compose -f docker-compose.backend.yml build --no-cache
-          docker-compose -f docker-compose.backend.yml up -d
+          
+          # Build new image without stopping current service
+          echo "🔨 Building new backend image..."
+          docker-compose -f docker-compose.backend.yml build --no-cache backend
+          
+          # Check if there's an existing service running
+          if docker-compose -f docker-compose.backend.yml ps backend | grep -q "Up"; then
+            echo "📊 Existing service detected, performing zero-downtime deployment..."
+            
+            # Scale up to 2 instances (new + old)
+            docker-compose -f docker-compose.backend.yml up -d --scale backend=2 --no-recreate
+            
+            # Wait for new instance to be healthy
+            echo "⏳ Waiting for new instance to be healthy..."
+            sleep 30
+            
+            # Check health of new instance
+            if curl -f http://localhost:8081/api/health > /dev/null 2>&1; then
+              echo "✅ New instance is healthy, scaling down to 1 instance"
+              docker-compose -f docker-compose.backend.yml up -d --scale backend=1 --no-recreate
+              echo "🎉 Zero-downtime deployment completed successfully!"
+            else
+              echo "❌ New instance failed health check, rolling back..."
+              docker-compose -f docker-compose.backend.yml up -d --scale backend=1 --no-recreate
+              echo "🔄 Rollback completed - service restored to previous version"
+              exit 1
+            fi
+          else
+            echo "🆕 No existing service, performing fresh deployment..."
+            docker-compose -f docker-compose.backend.yml up -d
+          fi
           
           # Clean up
           docker system prune -f 
           
-          # Smoke test CORS preflight for common endpoints
-          echo "🧪 Testing CORS preflight..."
-          sleep 5
+          # Final health check and smoke tests
+          echo "🧪 Running final health check and API tests..."
+          sleep 10
+          
+          # Test health endpoint
+          echo "Testing health endpoint..."
+          curl -f https://hihired.org/api/health || echo "Health check failed"
+          
+          # Test key API endpoints
+          echo "Testing key API endpoints..."
           for EP in \
             "/api/auth/register" \
             "/api/auth/login" \
-            "/api/auth/logout" \
-            "/experience/optimize" \
-            "/resume/generate" \
-            "/resume/generate-pdf" \
-            "/resume/parse" \
-            "/ai/education" \
-            "/ai/summary" \
-            "/api/user/save"; do
+            "/api/experience/optimize" \
+            "/api/resume/generate" \
+            "/api/ai/summary"; do
             echo "Testing OPTIONS $EP"
             curl -sS -i -X OPTIONS \
               -H "Origin: https://www.hihired.org" \
               -H "Access-Control-Request-Method: POST" \
               https://hihired.org$EP | grep -i "Access-Control-Allow-Origin" || true
           done
-          echo "Testing GET preflight for /api/user/load"
-          curl -sS -i -X OPTIONS \
-            -H "Origin: https://www.hihired.org" \
-            -H "Access-Control-Request-Method: GET" \
-            https://hihired.org/api/user/load | grep -i "Access-Control-Allow-Origin" || true
+          
+          echo "✅ Deployment verification completed!"
