--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -27,7 +27,7 @@ services:
       - NODE_ENV=prod
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "--method=OPTIONS", "http://localhost:8081/api/auth/login"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8081/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
